reduced the number of hexagons on the projects screen, fixed the hexagon clipping on the projects screen.

--- a/index.css
+++ b/index.css
@@ -103,7 +103,7 @@ body {
 
 .unavailable:active {
     stroke: red;
-    fill: transparent;
+    fill: black;
 }
 
 
